--- a/Senegal-Essay-Template.bib
+++ b/Senegal-Essay-Template.bib
@@ -11,100 +11,313 @@
 % Never put %comments in the middle of a bibtex entry, always between them
 %
 
-@BOOK{AD92,
-  EDITOR = {Alan Adolphson and Steven Sperber and Marvin Tretkoff},
-  TITLE = {$p$-adic Methods in Number Theory and Algebraic Geometry},
-  PUBLISHER = {American Mathematical Society},
-  YEAR = 1992,
-  NUMBER = 133,
-  SERIES = {Contemporary Mathematics},
-  ADDRESS = {Providence, RI}
+@article{Operto2015,
+author = {Operto, S. and Miniussi, A. and Brossier, R. and Combe, L. and M\'{e}tivier, L. and Monteiller, V. and Ribodetti, A. and Virieux, J.},
+title = {Efficient 3-D frequency-domain mono-parameter full-waveform inversion of ocean-bottom cable data: application to Valhall in the visco-acoustic vertical transverse isotropic approximation},
+journal = {Geophysical Journal International},
+volume = {202},
+number = {2},
+pages = {1362-1391},
+year = {2015},
+doi = {10.1093/gji/ggv226},
+URL = { + http://dx.doi.org/10.1093/gji/ggv226},
+eprint = {/oup/backfile/content_public/journal/gji/202/2/10.1093/gji/ggv226/2/ggv226.pdf}
 }
-% note
-@BOOK{latex,
-   author = "Leslie Lamport",
-   title = "{\LaTeX \rm:} {A} Document Preparation System",
-   publisher = "Addison-Wesley",
-   year = 1986 
+@article{Amestoy2016,
+author = {Patrick Amestoy and Romain Brossier and Alfredo Buttari and Jean-Yves L'Excellent and Theo Mary and Ludovic M\'{e}tivier and Alain Miniussi and Stephane Operto},
+title = {Fast 3D frequency-domain full-waveform inversion with a parallel block low-rank multifrontal direct solver: Application to OBC data from the North Sea},
+journal = {GEOPHYSICS},
+volume = {81},
+number = {6},
+pages = {R363-R383},
+year = {2016},
+doi = {10.1190/geo2016-0052.1},
+URL = { 
+        https://doi.org/10.1190/geo2016-0052.1
+    
+},
+eprint = { 
+        https://doi.org/10.1190/geo2016-0052.1
+    
 }
-% note
-@misc{Beardon,
- author={Alan F. Beardon},
- title={From Problem Solving to Research},
- note={Unpublished manuscript},
- address={African Institute for Mathematical Sciences},
- year={2006}
 }
-% note
-@article{Shannon48,
- author = 	 "Shannon, C. E.",
-  title = 	 "A Mathematical Theory of Communication",
- journal="Bell Sys. Tech. J.",
- volume = 27,
- pages ="379-423, 623-656",
- year = 1948
+@Article{Reddy2012,
+author = {Reddy, P.R.},
+title = {Historical development of seismic imaging technique an overview},
+journal = {Journal of the Indian Geophysical Union},
+year = {2012},
+volume = {16},
+number = {3},
+pages = {71-86},
 }
-% note
-@incollection{shannon44,
- author = 	 {Shannon, C. E.},
- title = {The Best Detection of Pulses},
- booktitle = {Collected Papers of Claude Shannon},
- publisher = {IEEE Press},
-  editor={N. J. A. Sloane and A. D. Wyner},
- year = {1993},
-pages={148--150},
-address={New York}
+@article{Operto2007,
+author = {Stéphane Operto and Jean Virieux and Patrick Amestoy and Jean-Yves L'Excellent and Luc Giraud and Hafedh Ben Hadj Ali},
+title = {3D finite-difference frequency-domain modeling of visco-acoustic wave propagation using a massively parallel direct solver: A feasibility study},
+journal = {GEOPHYSICS},
+volume = {72},
+number = {5},
+pages = {SM195-SM211},
+year = {2007},
+doi = {10.1190/1.2759835},
+URL = { 
+        https://doi.org/10.1190/1.2759835   
+},
+eprint = { 
+        https://doi.org/10.1190/1.2759835   
 }
-% note
-@TECHREPORT{MacKay86,
- KEY		="MacKay",
- AUTHOR		="D. J. C. ~MacKay",
- TITLE		="Statistical Testing of High Precision Digitisers",
- YEAR		="1986",
- NUMBER		="3971",
- INSTITUTION	="Royal Signals and Radar Establishment, 
-			Malvern, Worcester. WR14 3PS"
 }
-% note
-@INPROCEEDINGS{MacKay94:fe,
- KEY		="MacKay",
- AUTHOR		="D. J. C. MacKay",
- TITLE		="A Free Energy Minimization Framework for 
-	Inference Problems in Modulo 2 Arithmetic",
- BOOKTITLE      ="Fast Software Encryption (Proceedings of 1994 K.U. Leuven Workshop on Cryptographic Algorithms)",
-  editor =	 "B. Preneel",
-  series =	 "Lecture Notes in Computer Science Series",
-  number = 	 "1008",
- YEAR		=1995,
-  publisher =	 "Springer",
- PAGES		="179-195",
- ANNOTE ="Date submitted: 15 Jan 1995; Date accepted: 22 March 1995; Collaborating institutes: Cambridge University Computer Laboratory"
+@InBook{Brossier2010,
+author = {Brossier, R. and Etienne, V. and Operto S. and Virieux J.},
+title = {Frequency-Domain Numerical Modelling of Visco-Acoustic Waves Based on Finite-Difference and Finite-Element Discontinuous Galerkin Methods},
+chapter = {7},
+year = {2010},
 }
-% note
-@UNPUBLISHED{mnc4pfoutdated,
-  KEY		="MacKay and Neal",
-  AUTHOR		="D. J. C. MacKay and R. M. Neal",
-  TITLE		="Good Codes based on Very Sparse Matrices",
-  YEAR		=1995,
-  NOTE="Available from \url{www.inference.phy.cam.ac.uk}",
-  PAGES		="",
-  ANNOTE ="Date submitted: ; Date accepted: ; Collaborating institutes:
- 		  University of Toronto"
+@PhdThesis{BROSSIERPhD,
+author = {Romain BROSSIER},
+title = {Imagerie sismique \`{a} deux dimensions des milieux visco-\'{e}lastiques par inversion des formes d'ondes: d\'{e}veloppements m\'{e}thodologiques et applications},
+school = {Universit\'{e} de Nice-Sophia Antipolis},
+year = {2009}
 }
-% note
-@PhdThesis{mcdthesis,
-  author = 	 {M. C. Davey},
-  title = 	 {Error-correction using Low-Density Parity-Check Codes},
-type={PhD},
-  school = 	 {University of Cambridge},
-  year = 	 {1999},
+@Article{Brossier2014,
+author = {Brossier, R. and Pajot, B. and Combe, L. and  Operto, S. and Metivier L. and J. Virieux},
+title = {Time and frequency-domain FWI implementations based on time solver - Analysis of computational
+complexities},
+journal = {76th EAGE Conference and exhibition},
+year = {2014},
 }
-% note
-@MISC{Webots,
-  AUTHOR = {Webots},
-  TITLE = {Commercial Mobile Robot Simulation Software},
-  NOTE = {\url{www.cyberbotics.com}},
-  EDITOR = {Cyberbotics Ltd.},
-  YEAR = {2012}
+@article {Plessix2011,
+author = {Plessix, R.-\'{E}. and Cao, Q.},
+title = {A parametrization study for surface seismic full waveform inversion in an acoustic vertical transversely isotropic medium},
+journal = {Geophysical Journal International},
+volume = {185},
+number = {1},
+publisher = {Blackwell Publishing Ltd},
+issn = {1365-246X},
+url = {http://dx.doi.org/10.1111/j.1365-246X.2011.04957.x},
+doi = {10.1111/j.1365-246X.2011.04957.x},
+pages = {539--556},
+keywords = {Inverse theory, Seismic anisotropy, Wave propagation},
+year = {2011},
 }
+@article{Virieux2009,
+author = {J. Virieux and S. Operto},
+title = {An overview of full-waveform inversion in exploration geophysics},
+journal = {GEOPHYSICS},
+volume = {74},
+number = {6},
+pages = {WCC1-WCC26},
+year = {2009},
+doi = {10.1190/1.3238367},
+
+URL = { 
+        https://doi.org/10.1190/1.3238367
+    
+},
+eprint = { 
+        https://doi.org/10.1190/1.3238367
+    
+}
+
+}
+@article{Shin2001,
+author = {Changsoo Shin and Kwangjin Yoon and Kurt J. Marfurt and Keunpil Park and Dongwoo Yang and Harry Y. Lim and Seunghwan Chung and Sungryul Shin},
+title = {Efficient calculation of a partial-derivative wavefield using reciprocity for seismic imaging and inversion},
+journal = {GEOPHYSICS},
+volume = {66},
+number = {6},
+pages = {1856-1863},
+year = {2001},
+doi = {10.1190/1.1487129},
+
+URL = { 
+        https://doi.org/10.1190/1.1487129
+    
+},
+eprint = { 
+        https://doi.org/10.1190/1.1487129
+    
+}
+
+}
+@article{Pratt1998,
+author = {Pratt, R. Gerhard and Shin, Changsoo and Hick, G. J.},
+title = {Gauss-Newton and full Newton methods in frequency-space seismic waveform inversion},
+journal = {Geophysical Journal International},
+volume = {133},
+number = {2},
+pages = {341-362},
+year = {1998},
+doi = {10.1046/j.1365-246X.1998.00498.x},
+URL = { + http://dx.doi.org/10.1046/j.1365-246X.1998.00498.x},
+eprint = {/oup/backfile/content_public/journal/gji/133/2/10.1046/j.1365-246x.1998.00498.x/2/133-2-341.pdf}
+}
+@article{Operto2014,
+  title = {{C}omputationally efficient three-dimensional acoustic finite-difference frequency-domain seismic modeling in vertical transversely isotropic media with sparse direct solver},
+  author = {{O}perto, {S}. and {B}rossier, {R}. and {C}ombe, {L}. and {M}etivier, {L}. and {R}ibodetti, {A}lessandra and {V}irieux, {J}.},
+  journal = {{G}eophysics},
+  volume = {79},
+  numero = {5},
+  pages = {{T}257--{T}275},
+  ISSN = {0016-8033},
+  year = {2014},
+  DOI = {10.1190/geo2013-0478.1},
+  URL = {http://www.documentation.ird.fr/hor/fdi:010063616},
+}
+@inbook{Barkved2010,
+author = {Olav Barkved and Pete Heavey and Jan H. Kommedal and Jean-Paul van Gestel and Ruth Synnøve and Haga Pettersen and Chris Kent and Uwe Albertin},
+title = {Business Impact of Full Waveform Inversion at Valhall},
+booktitle = {SEG Technical Program Expanded Abstracts 2010},
+chapter = {},
+pages = {925-929},
+year = {2010},
+doi = {10.1190/1.3513929},
+URL = {https://library.seg.org/doi/abs/10.1190/1.3513929},
+eprint = {https://library.seg.org/doi/pdf/10.1190/1.3513929}
+}
+@Book{Rubin,
+ALTauthor = {Rubin H Landau},
+ALTeditor = {},
+title = {Beginner's Guide to High-Performance Computing},
+publisher = {Oregon State University},
+year = {2XXX}
+}
+@Book{Hager2010,
+author = {Georg Hager and Gerhard Wellein},
+editor = {SERIES EDITOR},
+title = {Introduction to High Performance Computing for Scientists and Engineers},
+publisher = {CRC Press},
+year = {2010}
+}
+@incollection{Pacheco2011,
+title = "In Praise of An Introduction to Parallel Programming ",
+editor = "Pacheco, Peter S. ",
+booktitle = "An Introduction to Parallel Programming ",
+publisher = "Morgan Kaufmann",
+edition = "",
+address = "Boston",
+year = "2011",
+pages = "i - ",
+isbn = "978-0-12-374260-5",
+doi = "https://doi.org/10.1016/B978-0-12-374260-5.00012-9",
+url = "https://www.sciencedirect.com/science/article/pii/B9780123742605000129",
+key = "tagkey2011i"
+}
+@article{Hicks2002,
+author = {Graham. J. Hicks},
+title = {Arbitrary source and receiver positioning in finite-difference schemes using Kaiser windowed sinc functions},
+journal = {GEOPHYSICS},
+volume = {67},
+number = {1},
+pages = {156-165},
+year = {2002},
+doi = {10.1190/1.1451454},
+URL = { 
+        https://doi.org/10.1190/1.1451454    
+},
+eprint = { 
+        https://doi.org/10.1190/1.1451454    
+}
+}
+@article{Berenger1994,
+title = "A perfectly matched layer for the absorption of electromagnetic waves",
+journal = "Journal of Computational Physics",
+volume = "114",
+number = "2",
+pages = "185 - 200",
+year = "1994",
+issn = "0021-9991",
+doi = "https://doi.org/10.1006/jcph.1994.1159",
+url = "http://www.sciencedirect.com/science/article/pii/S0021999184711594",
+author = "Jean-Pierre Berenger"
+}
+@article{Amestoy2013,
+author = {Patrick Amestoy and Cleve Ashcraft and Olivier Boiteau and Alfredo Buttari and Jean-Yves L'Excellent and Cl\'{e}ment Weisbecker},
+title = {Improving Multifrontal Methods by Means of Block Low-Rank Representations},
+journal = {SIAM Journal on Scientific Computing},
+volume = {37},
+number = {3},
+pages = {A1451-A1474},
+year = {2015},
+doi = {10.1137/120903476},
+
+URL = { 
+        https://doi.org/10.1137/120903476
+    
+},
+eprint = { 
+        https://doi.org/10.1137/120903476
+    
+}
+}
+@article{Metivier2016,
+author = {Ludovic M\'{e}tivier and Romain Brossier},
+title = {The SEISCOPE optimization toolbox: A large-scale nonlinear optimization library based on reverse communication},
+journal = {GEOPHYSICS},
+volume = {81},
+number = {2},
+pages = {F1-F15},
+year = {2016},
+doi = {10.1190/geo2015-0031.1},
+
+URL = { 
+        https://doi.org/10.1190/geo2015-0031.1
+    
+},
+eprint = { 
+        https://doi.org/10.1190/geo2015-0031.1
+    
+}
+}
+@article{Buttari2013,
+author = {Alfredo Buttari},
+title = {Fine-Grained Multithreading for the Multifrontal \$QR\$ Factorization of Sparse Matrices},
+journal = {SIAM Journal on Scientific Computing},
+volume = {35},
+number = {4},
+pages = {C323-C345},
+year = {2013},
+doi = {10.1137/110846427},
+
+URL = { 
+        https://doi.org/10.1137/110846427
+    
+},
+eprint = { 
+        https://doi.org/10.1137/110846427
+    
+}
+
+}
+@InProceedings{Agullo2016,
+author="Agullo, Emmanuel
+and Bosilca, George
+and Buttari, Alfredo
+and Guermouche, Abdou
+and Lopez, Florent",
+editor="Desprez, Fr{\'e}d{\'e}ric
+and Dutot, Pierre-Fran{\c{c}}ois
+and Kaklamanis, Christos
+and Marchal, Loris
+and Molitorisz, Korbinian
+and Ricci, Laura
+and Scarano, Vittorio
+and Vega-Rodr{\'i}guez, Miguel A.
+and Varbanescu, Ana Lucia
+and Hunold, Sascha
+and Scott, Stephen L.
+and Lankes, Stefan
+and Weidendorfer, Josef",
+title="Exploiting a Parametrized Task Graph Model for the Parallelization of a Sparse Direct Multifrontal Solver",
+booktitle="Euro-Par 2016: Parallel Processing Workshops",
+year="2017",
+publisher="Springer International Publishing",
+address="Cham",
+pages="175--186",
+isbn="978-3-319-58943-5"
+}
+
+
+
+
+
 
